# dirdigest

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.dirdigest  pyproject.toml
.devcontainer/: Dockerfile  config.fish  devcontainer.json  setup.sh
dirdigest/: cli.py  constants.py  core.py  formatter.py
dirdigest/utils/: clipboard.py  config.py  logger.py  patterns.py  system.py  tokens.py
tests/: README.md  conftest.py  test_cli_args.py  test_cli_mode_determination.py  test_cli_sorting_and_logging.py  test_configuration.py  test_content_processing.py  test_output_formatting.py  test_patterns_specificity.py  test_sorting_and_formatting.py  test_traversal_filtering.py  test_utils_patterns_specificity.py
tests/fixtures/test_dirs/encoding_issues_dir/: latin1_file.txt
tests/fixtures/test_dirs/large_files_dir/: large.txt  medium.txt  small.txt
tests/fixtures/test_dirs/simple_project/: file1.txt  file2.md
tests/fixtures/test_dirs/simple_project/sub_dir1/: script.py
tests/fixtures/test_dirs/symlink_dir/: broken_link_placeholder.txt  link_to_dir_placeholder.txt  link_to_file_placeholder.txt
tests/scripts/: setup_test_dirs.sh
