[project]
name = "dirdigest"
version = "0.1.0"
description = "Recursively processes directories and files, creating a structured digest for LLM context ingestion."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Your Name", email = "your.email@example.com"}, # TODO: Update with actual author info
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyperclip>=1.8",
    "PyYAML>=6.0",
    "types-pyyaml>=6.0.12.20250516",
]

[project.scripts]
dirdigest = "dirdigest.cli:main_cli"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=7.0",
    "mypy>=1.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"] # For isort compatibility
lint.ignore = ["E402", "E722", "F841"]
exclude = ["tests/fixtures/"]

[tool.isort]
line_length = 120
multi_line_output = 0
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = false


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dirdigest*"]
